--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,34 @@
-backports.ssl-match-hostname==3.5.0.1
-cached-property==1.3.1
-certifi==2018.1.18
+alembic==0.9.6
+Babel==2.5.1
+blinker==1.4
+certifi==2017.7.27.1
 chardet==3.0.4
-configobj==5.0.6
-docker==2.5.1
-docker-compose==1.17.1
-docker-pycreds==0.2.1
-dockerpty==0.4.1
-docopt==0.6.2
-enum34==1.1.6
-funcsigs==1.0.2
-functools32==3.2.3.post2
+click==6.7
+dominate==2.3.1
+Flask==1.0.2
+Flask-Babel==0.11.2
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.4.0
+Flask-Mail==0.9.1
+Flask-Migrate==2.1.1
+Flask-Moment==0.5.2
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
+guess_language-spirit==0.5.3
 idna==2.6
-ipaddress==1.0.17
-jsonschema==2.6.0
-mock==2.0.0
-pbr==3.1.1
-psutil==5.4.2
-pycairo==1.16.2
-pycrypto==2.6.1
-pygobject==3.26.1
-pyparted==3.11.1
-python-apt==1.6.4
-python-dotenv==0.10.3
-python-xapp==1.6.0
-python-xlib==0.20
-pyxdg==0.25
-PyYAML==3.12
+itsdangerous==0.24
+Jinja2==2.10
+Mako==1.0.7
+MarkupSafe==1.0
+PyJWT==1.5.3
+python-dateutil==2.6.1
+python-dotenv==0.7.1
+python-editor==1.0.3
+pytz==2017.2
 requests==2.18.4
-setproctitle==1.1.10
 six==1.11.0
-texttable==0.9.1
-typing==3.7.4.1
+SQLAlchemy==1.1.14
 urllib3==1.22
-websocket-client==0.44.0
+visitor==0.1.3
+Werkzeug==0.14.1
+WTForms==2.1
